--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
