--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,28 @@
 name: flutter_drink_recipe_book
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
-  bloc: ^8.1.2
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
   sliding_up_panel: ^2.0.0+1
+  injectable: ^2.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.8
   flutter_lints: ^2.0.0
+  freezed: ^2.4.6
 
 flutter:
   uses-material-design: true
