--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,44 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.8
+  flutter_gen_runner: ^5.4.0
   flutter_lints: ^2.0.0
   freezed: ^2.4.6
 
 flutter:
   uses-material-design: true
   generate: true
+
+  fonts:
+    - family: Prompt
+      fonts:
+        - asset: assets/fonts/Prompt-Thin.ttf
+          weight: 100
+
+        - asset: assets/fonts/Prompt-ExtraLight.ttf
+          weight: 200
+
+        - asset: assets/fonts/Prompt-Light.ttf
+          weight: 300
+
+        - asset: assets/fonts/Prompt-Regular.ttf
+          weight: 400
+
+        - asset: assets/fonts/Prompt-Medium.ttf
+          weight: 500
+
+        - asset: assets/fonts/Prompt-SemiBold.ttf
+          weight: 600
+
+        - asset: assets/fonts/Prompt-Bold.ttf
+          weight: 700
+
+        - asset: assets/fonts/Prompt-ExtraBold.ttf
+          weight: 800
+
+        - asset: assets/fonts/Prompt-Black.ttf
+          weight: 900
+
+flutter_gen:
+  output: lib/presenter/
+  line_length: 100
