--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,4 +1,4 @@
-arb-dir: lib/data/source/locale/arb
+arb-dir: lib/data/locale/arb
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 nullable-getter: false
