--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,17 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_bloc: ^8.1.3
-  bloc: ^8.1.2
+
+  # Parsing
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
   sliding_up_panel: ^2.0.0+1
   injectable: ^2.3.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +31,8 @@ dev_dependencies:
   flutter_gen_runner: ^5.4.0
   flutter_lints: ^2.0.0
   freezed: ^2.4.6
+  hive_generator: ^2.0.1
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
