--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   injectable: ^2.3.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
