--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   rxdart: ^0.27.7
+  path_provider: ^2.1.2
+  mime: ^1.0.5
+  image_picker: ^1.0.7
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
