add firebase storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   mime: ^1.0.5
   image_picker: ^1.0.7
   uuid: ^4.3.3
+  firebase_storage: ^11.6.6
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.4
 
 dev_dependencies:
   flutter_test:
